--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -5,7 +5,7 @@
   background: $white;
   color: $black;
   padding: 1rem 2rem;
-  font-family: $font-secondary;
+  font-family: $font-sans;
   font-size: 0.875rem;
   font-weight: 700;
   text-transform: uppercase;
