--- a/components/Navigation/Navigation.scss
+++ b/components/Navigation/Navigation.scss
@@ -69,7 +69,7 @@
       opacity: 1;
     }
 
-    @media (max-width: 768px) {
+    @media (width <= 768px) {
       display: none;
     }
   }
@@ -78,7 +78,7 @@
     padding: 0.625rem 1.25rem !important;
     font-size: 0.625rem !important;
 
-    @media (max-width: 768px) {
+    @media (width <= 768px) {
       padding: 0.5rem 1rem !important;
     }
   }
