--- a/styles/base/_reset.scss
+++ b/styles/base/_reset.scss
@@ -7,8 +7,8 @@
 }
 
 body {
-  font-family: $font-secondary;
-  font-weight: 300;
+  font-family: $font-sans;
+  font-weight: 400;
   background: $black;
   color: $white;
   overflow-x: hidden;
